--- a/css/style.css
+++ b/css/style.css
@@ -978,7 +978,7 @@ fieldset {
     
     #projects {
         padding: 50px 0 60px;
-        background:url(../img/project_bg_small_1.png) center;
+        background:url(../img/project_bg_small_.png) center;
     }
     
     
