--- a/css/style.css
+++ b/css/style.css
@@ -433,9 +433,9 @@ a.active {
     position: absolute;
     border: 10px solid #fd6565;
     width: 400px;
-    height: 400px;
-    top: 40px;
-    left: 50px;
+    height: 580px;
+    top: 20px;
+    right:40px;
     z-index: 1
 }
 .h{
