--- a/css/style.css
+++ b/css/style.css
@@ -427,6 +427,7 @@ a.active {
 
 .about-img-div img {
     margin: 0 auto;
+    position: relative;
 }
 
 .about-border {
@@ -978,7 +979,7 @@ fieldset {
     
     #projects {
         padding: 50px 0 60px;
-        background:url(../img/project_bg_small_3.png) center;
+        background:url(../img/project_bg.png) center;
     }
     
     
