--- a/css/style.css
+++ b/css/style.css
@@ -979,7 +979,7 @@ fieldset {
     
     #projects {
         padding: 50px 0 60px;
-        background:url(../img/project_bg.png) center;
+        background:url(../img/project_bg_small.png) center;
     }
     
     
